fixup! [Gradle] Add inspection to warn when testApi is used
- remove workaround for https://github.com/gradle/gradle/issues/18647, it doesn't seem to work any more???